--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,6 @@ workflows:
   print-workflow:
     jobs:
       - print_hello 
-      - print_world
+      - print_world:
           requires:
             - print-hello-workflow
