fixed syntax error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,4 @@ workflows:
       - print-hello 
       - print-world:
           requires:
-            - print-hello-workflow
+            - print-hello
