echo environment variable

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,15 +12,12 @@ jobs:
       - image: circleci/node:13.8.0
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    enviroment:
-      MY_ENV_VAR: Cumi
     
     steps:
       - checkout
       - run:
           name: "Print hello"
-          command: |
-            echo $MY_ENV_VAR
+          command: echo $MY_ENV_VAR
   
   print-world:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
