--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,21 +5,8 @@ version: 2.1
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  print-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: circleci/node:13.8.0
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    
-    steps:
-      - checkout
-      - run:
-          name: "Print hello"
-          command: echo $MY_ENV_VAR
   
-  print-world:
+  save_hello_world_output:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
@@ -29,15 +16,33 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Print world"
-          command: "echo World"
+          name: "Save output"
+          command: echo "text to output here" > output.txt
+
+      - persist_to_workspace:
+          root: ~/
+          paths:
+            - output.txt
+
+  print_output_file:
+    
+    docker:
+      - image: circleci/node:13.8.0
+
+      steps:
+        - attach_workspace:
+            at: ~/
+            
+        - run:
+            name: "Print output"
+            command: cat output.txt
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   test-env-vars:
     jobs:
-      - print-hello 
-      # - print-world:
-      #     requires:
-      #       - print-hello
+      - save_hello_world_output
+      - print_output_file:
+          requires:
+            - save_hello_world_output
