--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - checkout
       - run:
           name: "Save output"
-          command: echo "text to output here" > output.txt
+          command: echo "text to output here" > ~/output.txt
 
       - persist_to_workspace:
           root: ~/
@@ -35,7 +35,7 @@ jobs:
             
         - run:
             name: "Print output"
-            command: cat output.txt
+            command: cat ~/output.txt
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
