--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,47 +2,65 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+commands: 
+  print_pipeline_id:
+  description: "Prints Circle CI workflow ID"
+  parameters:
+    id:
+      type: string
+  steps:
+    - run: echo << parameters.id >>
+
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   
-  save_hello_world_output:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
+  my_job:
+    docker: 
       - image: circleci/node:13.8.0
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - checkout
-      - run:
-          name: "Save output"
-          command: echo "text to output here" > ~/output.txt
+      - print_pipeline_id:
+          id: << pipeline.id >>
 
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - output.txt
+  # save_hello_world_output:
+  #   # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+  #   # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  #   docker:
+  #     - image: circleci/node:13.8.0
+  #   # Add steps to the job
+  #   # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+  #   steps:
+  #     - checkout
+  #     - run:
+  #         name: "Save output"
+  #         command: 
+  #           - echo "text to output here" > ~/output.txt
 
-  print_output_file:
+  #     - persist_to_workspace:
+  #         root: ~/
+  #         paths:
+  #           - output.txt
+
+  # print_output_file:
     
-    docker:
-      - image: circleci/node:13.8.0
+  #   docker:
+  #     - image: circleci/node:13.8.0
 
-    steps:
-      - attach_workspace:
-          at: ~/
+  #   steps:
+  #     - attach_workspace:
+  #         at: ~/
           
-      - run:
-          name: "Print output"
-          command: cat ~/output.txt
+  #     - run:
+  #         name: "Print output"
+  #         command: cat ~/output.txt
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
   test-env-vars:
     jobs:
-      - save_hello_world_output
-      - print_output_file:
-          requires:
-            - save_hello_world_output
+      - my_job
+      # - save_hello_world_output
+      # - print_output_file:
+      #     requires:
+      #       - save_hello_world_output
