--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,8 @@ version: 2.1
 commands: 
   print_pipeline_id:
   description: "Prints Circle CI workflow ID"
-  parameters:
-    id:
-      type: string
   steps:
-    - run: echo << parameters.id >>
+    - run: echo ${CIRCLE_WORKFLOW_ID}
 
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
@@ -19,8 +16,7 @@ jobs:
     docker: 
       - image: circleci/node:13.8.0
     steps:
-      - print_pipeline_id:
-          id: << pipeline.id >>
+      - print_pipeline_id
 
   # save_hello_world_output:
   #   # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
