--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ version: 2.1
 commands: 
   print_pipeline_id:
   description: "Prints Circle CI workflow ID"
+  parameters:
+    id:
+      type: string
   steps:
     - run: echo ${CIRCLE_WORKFLOW_ID}
 
