--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,6 @@ version: 2.1
 commands: 
   print_pipeline_id:
     description: "Prints Circle CI workflow ID"
-    # parameters:
-    #   id:
-    #     type: string
     steps:
       - run: echo ${CIRCLE_WORKFLOW_ID}
 
@@ -20,6 +17,13 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - print_pipeline_id
+
+      - run: exit 1
+
+      - run:
+          name: on error
+          command: echo "Hello Error!"
+          when: on_fail
 
   # save_hello_world_output:
   #   # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
