--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,41 +4,41 @@ orbs:
   aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
 jobs:
-  create_infrastructure: 
-      docker:
-        - image: amazon/aws-cli
-      steps:
-        - checkout
-        - run:
-            name: Create Cloudformation Stack
-            command: |
-              aws cloudformation deploy \
-                --template-file template.yml \
-                --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-                --region us-east-1
-        
-  # configure_infrastructure:
+  # create_infrastructure: 
   #     docker:
-  #       - image: python:3.7-alpine3.11
+  #       - image: amazon/aws-cli
   #     steps:
   #       - checkout
-  #       - add_ssh_keys:
-  #           fingerprints: ["59:22:c2:c5:42:c6:20:7d:5e:6a:f6:6d:a2:0e:c7:5a"]
   #       - run:
-  #           name: Install dependencies
+  #           name: Create Cloudformation Stack
   #           command: |
-  #             apk add --update ansible
-  #       - run:
-  #           name: Configure server
-  #           command: |
-  #             ansible-playbook -i inventory playbook.yml
+  #             aws cloudformation deploy \
+  #               --template-file template.yml \
+  #               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+  #               --region us-east-1
+        
+  configure_infrastructure:
+      docker:
+        - image: python:3.7-alpine3.11
+      steps:
+        - checkout
+        - add_ssh_keys:
+            fingerprints: ["59:22:c2:c5:42:c6:20:7d:5e:6a:f6:6d:a2:0e:c7:5a"]
+        - run:
+            name: Install dependencies
+            command: |
+              apk add --update ansible
+        - run:
+            name: Configure server
+            command: |
+              ansible-playbook -i inventory playbook.yml
 
 # Sequential workflow
 workflows:
   # Name the workflow
   my_workflow:
     jobs:
-      - create_infrastructure
-      # - configure_infrastructure
+      # - create_infrastructure
+      - configure_infrastructure
 
       
