--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
         - run:
             name: Configure server
             command: |
-              ansible-playbook -i inventory playbook.yml
+              ansible-playbook -i inventory main.yml
 
 # Sequential workflow
 workflows:
