--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
         - run:
             name: Install dependencies
             command: |
-              sudo apt get install ansible
+              apt install ansible
         - run:
             name: Configure server
             command: |
