--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
         
   configure_infrastructure:
       docker:
-        - image: amazon/aws-cli
+        - image: python:3.7-alpine3.11
       steps:
         - checkout
         - add_ssh_keys:
@@ -27,7 +27,7 @@ jobs:
         - run:
             name: Install dependencies
             command: |
-              apt install ansible
+              apk add --update ansible
         - run:
             name: Configure server
             command: |
