--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 # Use a package of configuration called an orb.
-orbs: 
-  aws-cli: circleci/aws-cli@2.0.3
+# orbs: 
+#   aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
 jobs:
   # create_infrastructure: 
@@ -17,28 +17,45 @@ jobs:
   #               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
   #               --region us-east-1
         
-  configure_infrastructure:
-      docker:
-        - image: python:3.7-alpine3.11
-      steps:
-        - checkout
-        - add_ssh_keys:
-            fingerprints: ["df:c7:14:cb:b3:3d:33:57:c3:63:7c:27:cb:7e:47:51"]
-        - run:
-            name: Install dependencies
-            command: |
-              apk add --update ansible
-        - run:
-            name: Configure server
-            command: |
-              ansible-playbook -i inventory main.yml
+  # configure_infrastructure:
+  #     docker:
+  #       - image: python:3.7-alpine3.11
+  #     steps:
+  #       - checkout
+  #       - add_ssh_keys:
+  #           fingerprints: ["df:c7:14:cb:b3:3d:33:57:c3:63:7c:27:cb:7e:47:51"]
+  #       - run:
+  #           name: Install dependencies
+  #           command: |
+  #             apk add --update ansible
+  #       - run:
+  #           name: Configure server
+  #           command: |
+  #             ansible-playbook -i inventory main.yml
 
+  smoke_test:
+      docker:
+        - image: alpine:latest
+      steps:
+        - run: apk add --update curl
+        - run:
+            name: smoke test
+            command: |
+              URL="https://blog.udacity.com/"
+              # Test if website exists
+              if curl -s --head ${URL}
+              then
+                return 0
+              else
+                return 1
+              fi
 # Sequential workflow
 workflows:
   # Name the workflow
   my_workflow:
     jobs:
       # - create_infrastructure
-      - configure_infrastructure
+      # - configure_infrastructure
+      - smoke_test
 
       
