--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,28 @@
 version: 2.1
 # Use a package of configuration called an orb.
 # orbs: 
-#   aws-cli: circleci/aws-cli@2.0.3
+  aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
+command:
+  destroy_environment:
+    steps:
+      - run:
+          name: Destroy environment
+          command: |
+            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
 jobs:
-  # create_infrastructure: 
-  #     docker:
-  #       - image: amazon/aws-cli
-  #     steps:
-  #       - checkout
-  #       - run:
-  #           name: Create Cloudformation Stack
-  #           command: |
-  #             aws cloudformation deploy \
-  #               --template-file template.yml \
-  #               --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
-  #               --region us-east-1
+  create_infrastructure: 
+      docker:
+        - image: amazon/aws-cli
+      steps:
+        - checkout
+        - run:
+            name: Create Cloudformation Stack
+            command: |
+              aws cloudformation deploy \
+                --template-file template.yml \
+                --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
+                --region us-east-1
         
   # configure_infrastructure:
   #     docker:
@@ -35,27 +42,24 @@ jobs:
 
   smoke_test:
       docker:
-        - image: alpine:latest
+        - image: amazon/aws-cli
       steps:
-        - run: apk add --update curl
+        - checkout
         - run:
-            name: smoke test
+            name: simulate error
             command: |
-              URL="https://blog.udacity.com/"
-              # Test if website exists
-              if curl -s --head ${URL}
-              then
-                return 0
-              else
-                return 1
-              fi
+              return 1   # cause job to fail
+        - destroy_environment
+          when: on_fail
 # Sequential workflow
 workflows:
   # Name the workflow
   my_workflow:
     jobs:
-      # - create_infrastructure
+      - create_infrastructure
       # - configure_infrastructure
       - smoke_test
+          requires:
+            - create_infrastructure
 
       
