--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 # Use a package of configuration called an orb.
-# orbs: 
+orbs: 
   aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
 command:
