--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 orbs: 
   aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
-command:
+commands:
   destroy_environment:
     steps:
       - run:
