--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,13 @@ version: 2.1
 orbs: 
   aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
+commands:
+  destroy_environment:
+    steps:
+      - run:
+          name: Destroy environment
+          command: |
+            aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
 jobs:
   create_infrastructure: 
       docker:
@@ -42,10 +49,7 @@ jobs:
             name: simulate error
             command: |
               return 1   # cause job to fail
-            when: on_fail
-            command: |
-              aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5}
-
+        - destroy_environment
 # Sequential workflow
 workflows:
   # Name the workflow
