--- a/cloudfront.yml
+++ b/cloudfront.yml
@@ -1,6 +1,6 @@
 Parameters:
   # Existing Bucket name
-  PipelineID: myudacitybucket9099112
+  PipelineID:
     Description: Existing Bucket name
     Type: String
 
